Revert "[UI] Update Index HTML and Style.css to have red color on text <h1>"
This reverts commit 924781f61aad7d676da7d4f854ff30939c4f3c41.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="red-color">This is the website for git</h1>
+    <h1>This is the website for git</h1>
 </body>
 </html>
